# aiogram-bot-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: test_and_lint.yml
bot/: __main__.py  config.py  messages.py  settings.py
bot/database/: __init__.py  engine.py
bot/database/models/: __init__.py  base.py  base_models.py  chat.py  chat_models.py  custom_funcs.py  mixins.py  types.py  user.py  user_models.py
bot/database/repos/: __init__.py  base.py  chat.py  users.py
bot/enums/: db.py
bot/filters/: __init__.py  base_filter.py  example_filter.py  is_admin.py
bot/handlers/: __init__.py
bot/handlers/admins/: __init__.py  admin_panel.py
bot/handlers/events/: __init__.py  channel.py  chat.py  on_error.py  user.py
bot/handlers/users/: __init__.py  start.py  start_help.py
bot/keyboards/: inline.py
bot/middlewares/: README.md  __init__.py  base_middleware.py  database.py  example_middleware.py  throttling.py
bot/utils/: bot_commands.py  connect_to_services.py  links.py  log.py  migrations.py  misc.py
bot/utils/callback_factory/: callback_factory.py
migrations/: _get_next_revision_id.py  env.py
migrations/versions/: 001_init.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/db/: data.py  test_base_repo.py  test_user_repo.py
tests/utils/: __init__.py  mocked_bot.py  test_data.py  updates.py
